syntax = "proto3";

package test.fixture;

import "google/protobuf/timestamp.proto";

message ExampleEntity {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp deleted_at = 4; 
  string name = 5;
}

message GetExampleEntityRequest {
  uint64 id = 1;
}

message GetExampleEntityResponse {
  ExampleEntity example_entity = 1;
}

message SubExampleEntityRequest {
  uint64 id = 1;
}

message SubExampleEntityResponse {
  ExampleEntity example_entity = 1;
}

message PubExampleEntityRequest {
  ExampleEntity example_entity = 1;
}

message PubExampleEntityResponse {
  uint64 id = 1;
}

service ExampleService {
  rpc GetExampleEntity(GetExampleEntityRequest) returns (GetExampleEntityResponse);
  rpc SubExampleEntity(SubExampleEntityRequest) returns (stream SubExampleEntityResponse);
  rpc PubExampleEntity(stream PubExampleEntityRequest) returns (PubExampleEntityResponse);
}
